# CodemodRecipe

./: .gitignore  .vibe.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLANS_SUMMARY.md  README.md  analysis_options.yaml  pubspec.yaml
.codemod/maps/: column_type.yaml
.codemod/recipes/: add_counter_field.yaml  insert_log_line.yaml
.cursor/plans/: yaml-ast-dsl-reference.plan.md
.cursor/rules/: codebase-memory.mdc
.github/workflows/: dart.yml
.vibe/: config.toml
.vibe/agents/: code-reviewer.toml  codestral-coder.toml  doc-writer.toml  test-writer.toml
doc/: CODE_QUALITY_PLAN.md  OPTION_A_PLAN.md  ast_localization_syntax.md
docs/: codemod-mcp.md
example/: README.md
lib/: codemod_recipe.dart  codemod_recipe_vscode.dart
rust/: Cargo.toml
rust/crates/engine/: Cargo.toml
rust/crates/engine/src/: adapter.rs  dart.rs  engine.rs  lib.rs  query.rs  span.rs
rust/crates/engine/tests/: golden_add_counter_test.rs  golden_add_log_line_test.rs  golden_insert_test.rs  golden_remove_test.rs  idempotency_test.rs  leading_trivia_test.rs
rust/crates/host/: Cargo.toml
rust/crates/host/src/: config.rs  diff.rs  dispatch.rs  lib.rs  map_registry.rs  naming.rs  patch_selector.rs  path_sandbox.rs  post_execution.rs  preview_token.rs  protocol.rs  registry.rs  runner.rs  template.rs
rust/crates/host/tests/: dispatch_test.rs  mcp_test.rs
test/: TEST_STANDARDS.md  codemod_recipe_test.dart  test_utils.dart  vscode_host_test.dart
vscode_extension/: .gitignore  .vscodeignore  README.md  build.sh  package-lock.json  package.json  tsconfig.json
(+244 files in other folders)
