[package]
name = "codemod_recipe_host"
version = "0.1.0"
edition = "2021"

[lib]
name = "codemod_recipe_host"
path = "src/lib.rs"

[[bin]]
name = "codemod_host"
path = "src/bin/codemod_host.rs"

[[bin]]
name = "codemod_mcp"
path = "src/bin/codemod_mcp.rs"

[dependencies]
codemod_recipe_core = { path = "../core" }
codemod_recipe_engine = { path = "../engine" }
codemod_recipe_yaml = { path = "../yaml" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
md5 = "0.7"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
